fix: gap under blog
Issue #23

--- a/portfolio/src/styles/index.css
+++ b/portfolio/src/styles/index.css
@@ -27,11 +27,11 @@
 html, #root {
   font-family: 'Roboto Mono', monospace;
   color: var(--dark-text);
-  height: 100%;
+  height: 100vh;
 }
 
 body {
-  height: 100%;
+  height: 100vh;
   background-color: var(--light-background);
 }
 
